gcp/argocd/addons/pacman/httproute.yaml
# Auto-generated file, do not edit directly
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pacman-route
  namespace: pacman
spec:
  parentRefs:
    - name: us-central1-gateway
      namespace: envoy-gateway-system
      sectionName: https-wildcard
  hostnames:
    - pacman.mhaigh-us-central1.k8sbackup.dev
  rules:
    - backendRefs:
        - name: pacman
          port: 80
